--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
 PORT = 5000
-MONGO_URL = mongodb+srv://grimreaperamol:Loma786090730@cluster0.yd50dsw.mongodb.net/BlogsApp?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URL = mongodb+srv://<username>:<password>@cluster0.yd50dsw.mongodb.net/BlogsApp?retryWrites=true&w=majority&appName=Cluster0
